Added more to "Create EFT Record" use case

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -477,6 +477,12 @@
                 <li>Context: Main Accounting Procedure will write EFT data to a disk</li>
                 <li>Actors: Main Accounting Procedure</li>
                 <li>Main Success Scenario:
+                    <ol>
+                        <li>EFT Data is written to a disk</li>
+                        <Li>Banking computer ensures the correct amount is credited to the account</li>
+                        <Li>Manager receives summary report about accounts payable</li>
+                        <Li>The summary report lists all the correct information</li>
+                    </ol>
                 </li>
             </ul>
         </li>
