Updating image link for bitbucket

--- a/Team7_Requirements/Report.html
+++ b/Team7_Requirements/Report.html
@@ -83,7 +83,7 @@
         </tr>
     </table>
 
-    <img src='./src/Bitbucket.PNG'>
+    <img src='./src/Bitbucket.png'>
 
     <h1>Paragraph</h1>
     <p>Our organization has been given the task of creating the ChocAn data processing software. 
