--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -87,22 +87,34 @@
     <p>The ChocAn System has several requirements that must be met in order for it to operate properly.
       <br>
       <br> <strong>What sections will be computerized and how?</strong>
-      <br> &emsp; Information such as the data corresponding to services, members, providers, as well as reports should be computerized. This should be done by entering the information into a database.
+      <br> &emsp; Information such as the data corresponding to services, members, providers, as well as
+      <br> &emsp; reports should be computerized. This should be done by entering the information into a database.
       <br>
       <br> <strong>Where will the data will be stored?</strong>
-      <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in sorting and searching for specific information. This will also protect members' sensitive information. 
+      <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in sorting 
+      <br> &emsp; and searching for specific information. This will also protect members' sensitive information. 
       <br>
       <br> <strong>What hardware will be needed?</strong> 
-      <br> &emsp; The requirements for a database are: an operating system, a database server, processor cores, 8+ GB of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up in amount/size needed as the data increases. 
+      <br> &emsp; The requirements for a database are: an operating system, a database server, processor cores, 8+ GB 
+      <br> &emsp; of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up in amount/size
+      <br> &emsp; needed as the data increases. 
       <br>
       <br> <strong>How will the ChocAn system you develop will interact with other systems?</strong> 
-      <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to conveniently store both member and provider information, fees, and other data. It should be able to store data from the terminal as well. It must also be able to process and store information from the communications software (which is being built by another company).
+      <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to conveniently
+      <br> &emsp; store both member and provider information, fees, and other data. It should be able to store data from
+      <br> &emsp; the terminal as well. It must also be able to process and store information from the communications 
+      <br> &emsp; software (which is being built by another company).
       <br>
       <br> <strong>How will users will interact with the system?</strong> 
-      <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update their personal information. All 	users should be able to access the list of all services and service information as well. It is necessary to have all users perform an authentication/log in process to keep their data secure. 
-      <br> &emsp;&emsp;&emsp; a. Members should be able to see their updated balance after paying for services and/or paying member fees. They will also be able to access and use the communications software. They should be able to manage/update their personal information.
+      <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update their 
+      <br> &emsp; personal information. All users should be able to access the list of all services and service information
+      <br> &emsp; as well. It is necessary to have all users perform an authentication/log in process to keep their data secure. 
+      <br> &emsp;&emsp;&emsp; a. Members should be able to see their updated balance after paying for services and/or paying member 
+      <br> &emsp;&emsp;&emsp; fees. They will also be able to access and use the communications software. They should be able to 
+      <br> &emsp;&emsp;&emsp; manage/update their personal information.
       <br> &emsp;&emsp;&emsp; b. Providers should be able to see data relating to themselves, their services, and their clients. 
-      <br> &emsp;&emsp;&emsp; c. Managers should have the most access of all users and should be able to see most member/provider info as well as services performed.
+      <br> &emsp;&emsp;&emsp; c. Managers should have the most access of all users and should be able to see most member/provider 
+      <br> &emsp;&emsp;&emsp; info as well as services performed.
     </p>
 
     <!-- Class Diagram -->
