--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -87,8 +87,8 @@
     <p>The ChocAn System has several requirements that must be met in order for it to operate properly.
       <br>
       <br> <strong>What sections will be computerized and how?</strong>
-      <br> &emsp; Information such as the data corresponding to services, members, providers, as well as
-      <br> &emsp; reports should be computerized. This should be done by entering the information into a database.
+      <br> &emsp; Information such as the data corresponding to services, members, providers, as well as reports
+      <br> &emsp; should be computerized. This should be done by entering the information into a database.
       <br>
       <br> <strong>Where will the data will be stored?</strong>
       <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in sorting 
