small grammar fixes

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -90,7 +90,7 @@
       <br> &emsp; Information such as the data corresponding to services, members, providers, as well as reports
       <br> &emsp; should be computerized. This should be done by entering the information into a database.
       <br>
-      <br> <strong>Where will the data will be stored?</strong>
+      <br> <strong>Where will the data be stored?</strong>
       <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in sorting 
       <br> &emsp; and searching for specific information. This will also protect members' sensitive information. 
       <br>
@@ -99,13 +99,13 @@
       <br> &emsp; of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up in amount/size
       <br> &emsp; needed as the data increases. 
       <br>
-      <br> <strong>How will the ChocAn system you develop will interact with other systems?</strong> 
+      <br> <strong>How will the ChocAn system you develop interact with other systems?</strong> 
       <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to conveniently
       <br> &emsp; store both member and provider information, fees, and other data. It should be able to store data from
       <br> &emsp; the terminal as well. It must also be able to process and store information from the communications 
       <br> &emsp; software (which is being built by another company).
       <br>
-      <br> <strong>How will users will interact with the system?</strong> 
+      <br> <strong>How will users interact with the system?</strong> 
       <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update their 
       <br> &emsp; personal information. All users should be able to access the list of all services and service information
       <br> &emsp; as well. It is necessary to have all users perform an authentication/log in process to keep their data secure. 
