put in percent contributions and member tasks (as determined already in slack)

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -35,7 +35,7 @@
             <td>Caroline Johnson</td>
             <td>12100578</td>
             <td>chjohnson9@crimson.ua.edu</td>
-            <td></td>
+            <td>2</td>
         </tr>
         <tr>
             <td>TJ Trueblood</td>
@@ -53,33 +53,33 @@
         </tr>
         <tr>
             <td>Luca Conti</td>
-            <td></td>
-            <td></td>
+            <td>Class Diagram</td>
+            <td>20%</td>
         </tr>
         <tr>
             <td>William Jefferson</td>
-            <td></td>
-            <td></td>
+            <td>Activity Diagrams</td>
+            <td>16.25%</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
-            <td></td>
-            <td></td>
+            <td>Activity Diagrams</td>
+            <td>16.25%</td>
         </tr>
          <tr>
             <td>Shanissee Lee</td>
-            <td></td>
-            <td></td>
+            <td>Activity Diagrams</td>
+            <td>16.25%</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
-            <td>Set up report and wrote paragraph outlining requirements.</td>
-            <td></td>
+            <td>Paragraph and Bitbucket statistics</td>
+            <td>15%</td>
         </tr>
         <tr>
             <td>TJ Trueblood</td>
-            <td></td>
-            <td></td>
+            <td>Activity Diagrams</td>
+            <td>16.25%</td>
         </tr>
     </table>
 
