added space for project 1 fixes to go

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -120,5 +120,13 @@
     <!-- Class Diagram -->
 
     <!-- Activity Diagrams -->
+    
+    <h1>Project 1 Fixes</h1>
+
+    <!--Updated Glossary-->
+
+    <!--Updated Diagram-->
+
+    <!--Updated Use Cases-->
 
 </html>
