Started to work on class diagram

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -118,7 +118,8 @@
     </p>
 
     <!-- Class Diagram -->
-
+    <h1>Class Diagram</h1>
+    <img src="./src/case_diagram.png">
     <!-- Activity Diagrams -->
     
     <h1>Project 1 Fixes</h1>
