fixed p1 individual reports to match each other

--- a/Team7_Analysis/Team7_P1_Fixes/ShanisseeLeeTeam7Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/ShanisseeLeeTeam7Report.html
@@ -54,7 +54,7 @@
         <tr>
             <td>Luca Conti</td>
             <td>Layed out HTML format, gave some Use Case descriptions</td>
-            <td>19%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>William Jefferson</td>
@@ -68,18 +68,18 @@
         </tr>
         <tr>
             <td>Caroline Johnson</td>
-            <td>Created Glossary</td>
+            <td>Created Glossary and fixed format/consistency issues</td>
             <td>18%</td>
         </tr>
         <tr>
             <td>TJ Trueblood</td>
             <td>Described each use case in this HTML file</td>
-            <td>20%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
             <td>Wrote Paragraph</td>
-            <td>15%</td>
+            <td>18%</td>
         </tr>
     </table>
 </html>
