--- a/Team7_Analysis/Team7_P1_Fixes/TJTRuebloodTeam7Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/TJTRuebloodTeam7Report.html
@@ -29,7 +29,7 @@
             <td>Shanissee Lee</td>
             <td>12100396</td>
             <td>srlee2@crimson.ua.edu</td>
-            <td>#</td>
+            <td>1</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
@@ -54,32 +54,32 @@
         <tr>
             <td>Luca Conti</td>
             <td>Layed out HTML format, gave some Use Case descriptions</td>
-            <td>20%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>William Jefferson</td>
             <td>Created use case diagram</td>
-            <td>20%</td>
+            <td>18%</td>
         </tr>
          <tr>
             <td>Shanissee Lee</td>
-            <td>Task Performed</td>
-            <td>Percent Contributed</td>
+            <td>Reviewing HTML format, error checking document</td>
+            <td>10%</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
-            <td>Created Glossary</td>
-            <td>20%</td>
+            <td>Created Glossary and fixed format/consistency issues</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>TJ Trueblood</td>
             <td>Described each use case in this HTML file</td>
-            <td>20%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
             <td>Wrote Paragraph</td>
-            <td>20%</td>
+            <td>18%</td>
         </tr>
     </table>
 </html>
