--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -89,15 +89,19 @@
       <br> <strong>What sections will be computerized and how?</strong>
       <br> &emsp; Information such as the data corresponding to services, members, providers, as well as reports
       <br> &emsp; should be computerized. This should be done by entering the information into a database.
+      <br> &emsp; For the purpose of this project, we will not use an actual database as it is too expensive, but
+      <br> &emsp; we can model/mimic the organization, storage, and function of a database instead.
       <br>
       <br> <strong>Where will the data be stored?</strong>
       <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in sorting 
       <br> &emsp; and searching for specific information. This will also protect members' sensitive information. 
+      <br> &emsp; We will use a folder/table format to mimic a database.
       <br>
       <br> <strong>What hardware will be needed?</strong> 
       <br> &emsp; The requirements for a database are: an operating system, a database server, processor cores, 8+ GB 
       <br> &emsp; of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up in amount/size
-      <br> &emsp; needed as the data increases. 
+      <br> &emsp; needed as the data increases. Since we are not using an actual database in the project, this can be modeled
+      <br> &emsp; on our members' laptops/computers (we will not have an actual database server).
       <br>
       <br> <strong>How will the ChocAn system you develop interact with other systems?</strong> 
       <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to conveniently
