Edited png name

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -123,7 +123,7 @@
 
     <!-- Class Diagram -->
     <h1>Class Diagram</h1>
-    <img src="./src/case_diagram.png">
+    <img src="./src/class_diagram.png">
     <!-- Activity Diagrams -->
 
 </html>
