--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -171,7 +171,7 @@
         <li>Request Report
             <ul>
                 <li>Context:</li>
-                <li>Actors: </li>
+                <li>Actors: Manager</li>
                 <li>Main Success Scenario:
                     <ol>
                     </ol>
@@ -182,50 +182,10 @@
                 </li>
             </ul>
         </li>
-        <li>Get Member Report
-            <ul>
-                <li>Context:</li>
-                <li>Actors: </li>
-                <li>Main Success Scenario:
-                    <ol>
-                    </ol>
-                </li>
-            </ul>
-        </li>
-        <li>Get Provider Report
-            <ul>
-                <li>Context:</li>
-                <li>Actors: </li>
-                <li>Main Success Scenario:
-                    <ol>
-                    </ol>
-                </li>
-            </ul>
-        </li>
-        <li>Get Summary Report
-            <ul>
-                <li>Context:</li>
-                <li>Actors: </li>
-                <li>Main Success Scenario:
-                    <ol>
-                    </ol>
-                </li>
-            </ul>
-        </li>
-        <li>Get EFT Report
-            <ul>
-                <li>Context:</li>
-                <li>Actors: </li>
-                <li>Main Success Scenario:
-                    <ol>
-                    </ol>
-                </li>
-            </ul>
-        </li>
         <li>Run Main Accounting Procedure
             <ul>
                 <li>Context:</li>
-                <li>Actors: </li>
+                <li>Actors: Timer</li>
                 <li>Main Success Scenario:
                     <ol>
                     </ol>
@@ -235,7 +195,7 @@
         <li>Manage Member
             <ul>
                 <li>Context:</li>
-                <li>Actors:</li>
+                <li>Actors: Operator</li>
                 <li>Main Success Scenario:
                     <ol>
                     </ol>
@@ -245,93 +205,17 @@
         <li>Manage Provider
             <ul>
                 <li>Context:</li>
-                <li>Actors:</li>
+                <li>Actors: Operator</li>
                 <li>Main Success Scenario:
                     <ol>
                     </ol>
-                </li>
-            </ul>
-        </li>
-        <li>Add Person
-            <ul>
-                <li>Context: A provider or member needs to be added to the system's list</li>
-                <li>Actors: Provider, Manager</li>
-                <li>Main Success Scenario:
-                    <ol>
-                        <li>Provider or Manager accesses the terminal</li>
-                        <li>They navigate to the edit list menu</li>
-                        <li>They select to add a member or provider to the list</li>
-                        <li>They enter the name of the new member/provider</li>
-                        <li>An account is created for the new member</li>
-                    </ol>
-                </li>
-                <li>Extensions:
-                    <ul>
-                        <li>4a. The provider/manager enters a name who already has an account
-                            <ul>
-                                <li>4a.1 The provider/manager enters the name of a person who already has an account</li>
-                                <li>The system informs the provider/manager that the person entered already has an account</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li>Remove Person
-            <ul>
-                <li>Context: A provider or member needs to be removed from the system's list</li>
-                <li>Actors: Provider, Manager</li>
-                <li>Main Success Scenario:
-                    <ol>
-                        <li>Provider or manager accesses the terminal</li>
-                        <li>They navigate to the edit list menu</li>
-                        <li>They select to remove a member or provider from the list</li>
-                        <li>They enter the name of the member/provider to be removed</li>
-                        <li>The account is removed from the list</li>
-                    </ol>
-                </li>
-                <li>Extensions: 
-                    <ul>
-                        <li>4a. The provider/manager enters a name that does not exist
-                            <ul>
-                                <li>4a.1 The provider/manager enters the name of a person who does not have an account</li>
-                                <li>4a.2 The system informs the provider/manager that the person does not have an account</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li>Update Person
-            <ul>
-                <li>Context: A provider or member needs to be updated on the system's list</li>
-                <li>Actors: Provider, Manager</li>
-                <li>Main Success Scenario:
-                    <ol>
-                        <li>Provider or manager accesses the terminal</li>
-                        <li>They navigate to the edit list menu</li>
-                        <li>They select to update a member or provider on the list</li>
-                        <li>They enter the name of the member/provider to be update</li>
-                        <li>They edit the information on the account that needs to be updated</li>
-                        <li>The system updates the information in the systems database</li>
-                    </ol>
-                </li>
-                <li>Extensions: 
-                    <ul>
-                        <li>4a. The provider/manager enters a name that does not exist
-                            <ul>
-                                <li>4a.1 The provider/manager enters the name of a person who does not have an account</li>
-                                <li>4a.2 The system informs the provider/manager that the person does not have an account</li>
-                            </ul>
-                        </li>
-                    </ul>
                 </li>
             </ul>
         </li>
         <li>Validate Member
             <ul>
                 <li>Context:</li>
-                <li>Actors:</li>
+                <li>Actors: Provider</li>
                 <li>Main Success Scenario:
                     <ol>
                     </ol>
